# mods

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  TODO
example-mod/: CMakeLists.txt  main.cc
libmod/: CMakeLists.txt
libmod/app/: main.cc
libmod/arch/win32/: mem.cc  uninject.cc
libmod/arch/win32/hooks/: dx11.cc  imgui_dx11.cc
libmod/hooks/: vtable.cc
libmod/include/libmod/: app.hh  hooks.hh  mem.hh  signature_manager.hh
modloader/: CMakeLists.txt  app.cc  app.hh  cfg.cc  cfg.hh  config.ini  inject.hh  processapi.hh  stdout_ui.cc  ui.hh
modloader/unix/: elf_parser.cc  elf_parser.hh  fs.cc  fs.hh  inject.cc  main.cc  processapi.cc  processapi_ext.hh
modloader/win32/: inject.cc  main.cc  processapi.cc  resources.hh  resources.rc  shellicon_ui.cc
nierautomata/: CMakeLists.txt
nierautomata/retool/: main.cc
